# wtt-demo

./: CMakeLists.txt  README.md
include/: arcball_camera.hpp  custom_mesh_types.hpp  data_loader.hpp  glview_control_panel.hpp  input_prop.hpp  integer_setter.hpp  mainwindow.hpp  message_box.hpp  opengl_widget.hpp  scene_object.hpp  triangle_mesh_scene.hpp  wtt_manager.hpp
resources/: resources.qrc
resources/qss/: input_prop.qss  integer_setter.qss  message_box.qss  wt_type_setter.qss
resources/shader/: triangle_mesh.fragment
src/: action_panel.cpp  arcball_camera.cpp  data_loader.cpp  glview_control_panel.cpp  input_prop.cpp  integer_setter.cpp  main.cpp  mainwindow.cpp  message_box.cpp  modal_widget.cpp  opengl_widget.cpp  triangle_mesh_scene.cpp  wtt_manager.cpp
uis/: messagebox.ui
